# poly2graph

./: .gitignore  MANIFEST.in  README.md  getting_started.ipynb  poly2graph_demo.ipynb  pyproject.toml  requirements.txt
assets/: polyStr_meta_paramVals.npz  poly_str_AND_meta.npz
src/poly2graph/: CharPolyClass.py  SpectralGraph.py  __init__.py  hamiltonian.py  skeleton2graph.py  spectral_graph.py  util.py  vis.py
src/poly2graph/gnl_transformer/: explain_gnl.py
src/poly2graph/poly2graph/: spectral_graph.py
src/poly2graph/poly2graph/dataset/: __init__.py  in_memory_dataset.py  sampling_1band.py
