[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poly2graph"
dynamic = ["version"]
description = "Automated Non-Hermitian Spectral Graph Construction"
authors = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
maintainers  = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
]
keywords = [
    "non-hermitian spectral graph", 
    "Hamiltonian spectral graph", 
    "non-bloch band", 
    "algebraic geometry", 
    "graph representation learning", 
    "computer vision", 
    "morphological image processing",
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = [
    "numpy",
    "sympy",
    "numba",
    "networkx",
    "scikit-image",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "tensorflow",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/sarinstein-yan/poly2graph"
Repository = "https://github.com/sarinstein-yan/poly2graph"

[tool.hatch.version]
path = "src/poly2graph/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "assets",
  "*.ipynb",     # any notebook in project root
  "**/*.ipynb",  # any notebook in sub-dirs
]

[tool.hatch.build.targets.wheel]
packages = ["src/poly2graph"]